--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Mod 3 Project</title>
-    <link rel="Stylesheet" href="index.css">
+    <link rel="Stylesheet" href="index.css" />
     <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
@@ -12,13 +12,13 @@
     <form class="auth main js-auth">
       <h2 class="auth__title main__content main__content--1"></h2>
       <ul>
-        <li>
+        <li class="">
           <label class="main__content main__content--2" for="auth__username">Username</label>
-          <input class="main__content main__content--3" id="auth__username" name="username" type="text" autocomplete="off" spellcheck="false" placeholder="dorothy.vaughan@nasa.gov">
+          <input class="main__content main__content--3 auth__input auth__input--username" id="auth__username" name="username" type="text" autocomplete="off" spellcheck="false" placeholder="dorothy.vaughan@nasa.gov">
         </li>
         <li>
           <label class="main__content main__content--4" for="auth__password">Password</label>
-          <input class="main__content main__content--5" id="auth__password" name="password" type="password">
+          <input class="main__content main__content--5 auth__input auth__input--password js-fallFlip" id="auth__password" name="password" type="password">
         </li>
         <li class="main__content main__content--6">
           <button type="submit" class="mover js-mover">Submit</button>
